
  - The limit/offset keywords to select() as well
    as the value passed to select.limit()/offset()
    will be coerced to integer.  [ticket:2116]
    (also in 0.6.7)

  - fixed bug where "from" clause gathering from an
    over() clause would be an itertools.chain() and
    not a list, causing "can only concatenate list"
    TypeError when combined with other clauses.

- engine
  - The C extension is now enabled by default on CPython
    2.x with a fallback to pure python if it fails to
    compile.  [ticket:2129]

- schema
  - The 'useexisting' flag on Table has been superceded
    by a new pair of flags 'keep_existing' and 
    'extend_existing'.   'extend_existing' is equivalent
    to 'useexisting' - the existing Table is returned,
    and additional constructor elements are added.
    With 'keep_existing', the existing Table is returned,
    but additional constructor elements are not added -
    these elements are only applied when the Table
    is newly created.   [ticket:2109]

- types
  - REAL has been added to the core types.  Supported
    by Postgresql, SQL Server, MySQL, SQLite.  Note
    that the SQL Server and MySQL versions, which 
    add extra arguments, are also still available
    from those dialects.  [ticket:2081]

-event
  - Added @event.listens_for() decorator, given
    target + event name, applies the decorated 
    function as a listener.  [ticket:2106]

- pool
  - AssertionPool now stores the traceback indicating
    where the currently checked out connection was
    acquired; this traceback is reported within
    the assertion raised upon a second concurrent 
    checkout; courtesy Gunnlaugur Briem 
    [ticket:2103]

  - The "pool.manage" feature doesn't use pickle
    anymore to hash the arguments for each pool.

- sqlite
  - Fixed bug where reflection of foreign key
    created as "REFERENCES <tablename>" without
    col name would fail.  [ticket:2115]
    (also in 0.6.7)

- postgresql
  - Psycopg2 for Python 3 is now supported.
